feat(workout controller)：新增 /workout/{workout_id}/workout_sets [GET]  取得訓練內的訓練組列表 API
