# docs/swagger.yaml
@@ -2453,6 +2453,40 @@ paths:
       summary: 新增訓練組
       tags:
       - Workout
+  /workout/{workout_id}/workout_sets:
+    get:
+      consumes:
+      - application/json
+      description: 取得訓練內的訓練組列表
+      parameters:
+      - description: 訓練id
+        in: path
+        name: workout_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 獲取成功!
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.SuccessResult'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/workoutdto.WorkoutSet'
+                  type: array
+              type: object
+        "400":
+          description: 獲取失敗
+          schema:
+            $ref: '#/definitions/model.ErrorResult'
+      security:
+      - fitness_user_token: []
+      summary: 取得訓練內的訓練組列表
+      tags:
+      - Workout
 securityDefinitions:
   fitness_admin_token:
     in: header
